<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Text Above Map -->

    <!-- Map Fragment -->
...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/text_below_the_map"
        android:textSize="16sp"
        map:layout_constraintBottom_toTopOf="@+id/stop_activity_button"
        map:layout_constraintTop_toBottomOf="@+id/running_map"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/stop_activity_button"
        android:layout_width="wrap_content"
...
